# P8-WSC

./: .gitignore  .gitmodules  CMakeLists.txt  CPackP8.txt  README.md
Data/: TestModel.dyn
